feat: update artisan and fix swagger docs
