# app/modules/health/route.go
@@ -8,8 +8,16 @@ import (
 
 func Routes(r *gin.RouterGroup) {
 	//r.Use(TestMiddleware())
-	r.GET("", func(c *gin.Context) {
-		HealthCheck()
-		response.NewResponse().SetResult(":)").Json(c)
-	})
+	r.GET("", healthHandler)
+}
+
+// @Summary      Health Check
+// @Description  returns ok if the service is healthy
+// @Tags         health
+// @Produce      json
+// @Success      200  {object}  response.BaseHttpResponse
+// @Router       /v1/health [get]
+func healthHandler(c *gin.Context) {
+	HealthCheck()
+	response.NewResponse().SetResult(":)").Json(c)
 }
